Update and optimize